[gd_scene load_steps=5 format=2]

[ext_resource path="res://Styles/background.tres" type="StyleBox" id=1]
[ext_resource path="res://Fonts/elementfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://WinScreen.gd" type="Script" id=3]
[ext_resource path="res://Fonts/creditsfont.tres" type="DynamicFont" id=4]

[node name="WinScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 1920.0
margin_bottom = 1345.0
custom_constants/margin_right = 400
custom_constants/margin_top = 100
custom_constants/margin_left = 400
custom_constants/margin_bottom = 500
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 400.0
margin_top = 100.0
margin_right = 1520.0
margin_bottom = 845.0
custom_constants/separation = 300

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer2"]
margin_right = 1120.0
margin_bottom = 304.0
custom_constants/separation = 50
alignment = 1

[node name="gameOverLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 1120.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.654902, 0.666667, 0.741176, 1 )
text = "aaaa"
align = 1
autowrap = true

[node name="secretsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 116.0
margin_right = 1120.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.654902, 0.666667, 0.741176, 1 )
text = "aaaa"
align = 1
autowrap = true

[node name="backToMenuButton" type="Button" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 232.0
margin_right = 1120.0
margin_bottom = 304.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.654902, 0.666667, 0.741176, 1 )
custom_colors/font_color_hover = Color( 0.45098, 0.462745, 0.529412, 1 )
custom_colors/font_color_pressed = Color( 0.45098, 0.462745, 0.529412, 1 )
text = "Quit to menu"
flat = true

[node name="credits" type="Label" parent="Panel/MarginContainer/VBoxContainer2"]
margin_top = 604.0
margin_right = 1120.0
margin_bottom = 745.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.654902, 0.666667, 0.741176, 1 )
text = "Made by Jakub Okon
Assets used:
https://kenney.nl/assets/topdown-shooter
https://www.1001freefonts.com/valiant-times.font"
align = 1
autowrap = true
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer2/VBoxContainer/backToMenuButton" to="." method="_on_backToMenuButton_pressed"]
